# ultralight-java-reborn

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: ujr.publish-conventions.gradle.kts
buildSrc/src/main/kotlin/net/janrupf/ujr/gradle/: ConfigurationExportImport.kt  UJRGradlePlugin.kt
buildSrc/src/main/kotlin/net/janrupf/ujr/gradle/extensions/: UJRExtension.kt
buildSrc/src/main/kotlin/net/janrupf/ujr/gradle/tasks/: ExportConfiguration.kt
examples/full/: build.gradle.kts
examples/full/src/main/java/net/janrupf/ujr/example/full/: ClipboardBridge.java  FilesystemBridge.java  LoadListener.java  LoggerBridge.java  UJRFullExample.java  ViewListener.java
examples/glfw/: build.gradle.kts
examples/glfw/src/main/java/net/janrupf/ujr/example/glfw/: GLFWExample.java
examples/glfw/src/main/resources/shaders/: web.frag  web.vert
examples/javascript/: build.gradle.kts
examples/javascript/src/main/java/net/janrupf/ujr/example/javascript/: JavaScriptExample.java  (+1 more)
examples/png/: build.gradle.kts
examples/png/src/main/resources/: log4j2.xml
gradle/wrapper/: gradle-wrapper.properties
modules/api/: build.gradle.kts
modules/api/src/main/java/net/janrupf/ujr/api/: UltralightConfigBuilder.java  UltralightPlatform.java
modules/core/: build.gradle.kts
modules/core/src/main/java/net/janrupf/ujr/api/: UltralightConfigBuilder.java  UltralightKeyEventBuilder.java  UltralightMouseEventBuilder.java  UltralightPlatform.java  UltralightRenderer.java  UltralightResources.java  UltralightScrollEventBuilder.java  UltralightSession.java  UltralightView.java  UltralightViewConfigBuilder.java
modules/core/src/main/java/net/janrupf/ujr/core/: UltralightJavaReborn.java  UltralightJavaRebornConfigurator.java
modules/native-ap/src/main/java/net/janrupf/ujr/nap/: NativeAnnotationProcessor.java  TargetCollector.java
modules/platform-jni/: build.gradle.kts
modules/platform-jni/src/main/c/: .clang-format  CMakeLists.txt
modules/platform-jni/src/main/c/cmake/: Ultralight.cmake
modules/platform-jni/src/main/c/include/ujr/: Bitmap.hpp  Platform.hpp  Renderer.hpp  Session.hpp  View.hpp
modules/platform-jni/src/main/c/include/ujr/javascript/: JSClass.hpp  JSContext.hpp  JSContextGroup.hpp  JSGlobalContext.hpp  JSJavaClassCallbacks.hpp  JSJavaPrivateData.hpp  JSObject.hpp  JSString.hpp  JSUtil.hpp  JSValue.hpp  JniJavaScriptValueException.hpp
modules/platform-jni/src/main/c/include/ujr/support/: GC.hpp
modules/platform-jni/src/main/c/include/ujr/util/: JniClass.hpp  JniEntryGuard.hpp  JniEnv.hpp  JniException.hpp  JniExceptionCheck.hpp  JniField.hpp  JniIllegalArgumentException.hpp  JniMethod.hpp  JniName.hpp  JniRef.hpp  JniSignature.hpp  JniType.hpp
modules/platform-jni/src/main/c/include/ujr/wrapper/: Logger.hpp
modules/platform-jni/src/main/c/include/ujr/wrapper/buffer/: Buffer.hpp  BufferNative.hpp
modules/platform-jni/src/main/c/include/ujr/wrapper/clipboard/: Clipboard.hpp
modules/platform-jni/src/main/c/include/ujr/wrapper/filesystem/: Filesystem.hpp
modules/platform-jni/src/main/c/include/ujr/wrapper/listener/: LoadListener.hpp  ViewListener.hpp
modules/platform-jni/src/main/c/include/ujr/wrapper/surface/: Surface.hpp  SurfaceFactory.hpp
modules/platform-jni/src/main/c/src/: Bitmap.cpp  BitmapFactory.cpp  BitmapSurface.cpp  BitmapSurfaceFactoryProvider.cpp  Keyboard.cpp  Platform.cpp  PlatformProvider.cpp  Renderer.cpp  Session.cpp  UJRLibrary.cpp  View.cpp  platform_provider.cpp
modules/platform-jni/src/main/c/src/javascript/: JSClass.cpp  JSClassFactory.cpp  JSContext.cpp  JSContextGroup.cpp  JSContextGroupFactory.cpp  JSGlobalContext.cpp  JSGlobalContextFactory.cpp  JSJavaClassCallbacks.cpp  JSJavaPrivateData.cpp  JSObject.cpp  JSString.cpp  JSUtil.cpp  JSValue.cpp  JniJavaScriptValueException.cpp
modules/platform-jni/src/main/c/src/support/: GC.cpp
modules/platform-jni/src/main/c/src/util/: JniClass.cpp  JniEnv.cpp  JniException.cpp  JniExceptionCheck.cpp  JniIllegalArgumentException.cpp  JniMethod.cpp
modules/platform-jni/src/main/c/src/wrapper/: Logger.cpp
modules/platform-jni/src/main/c/src/wrapper/buffer/: Buffer.cpp  BufferNative.cpp
modules/platform-jni/src/main/c/src/wrapper/clipboard/: Clipboard.cpp  ClipboardNative.cpp
modules/platform-jni/src/main/c/src/wrapper/filesystem/: Filesystem.cpp  FilesystemNative.cpp
modules/platform-jni/src/main/c/src/wrapper/listener/: LoadListener.cpp  LoadListenerNative.cpp  ViewListener.cpp  ViewListenerNative.cpp
modules/platform-jni/src/main/c/src/wrapper/logger/: Logger.cpp  LoggerNative.cpp
modules/platform-jni/src/main/c/src/wrapper/surface/: Surface.cpp  SurfaceFactory.cpp  SurfaceFactoryNative.cpp  SurfaceNative.cpp
(+182 files in other folders)
